--- a/app/src/main/res/layout/first_news_row.xml
+++ b/app/src/main/res/layout/first_news_row.xml
@@ -67,7 +67,7 @@
 
             <TextView
                 android:id="@+id/news_title"
-                android:layout_width="wrap_content"
+                android:layout_width="365dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="3dp"
