--- a/app/src/main/res/layout/trade_dialogue.xml
+++ b/app/src/main/res/layout/trade_dialogue.xml
@@ -12,10 +12,10 @@
         android:id="@+id/tradeInputGuideText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="188dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="40dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <TextView
